--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/csurf": "^1.11.2",
     "@types/es6-promisify": "^6.0.1",
-    "@types/express": "^4.17.17",
+    "@types/express": "5.0.1",
     "@types/glob": "^8.1.0",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.0.0",
@@ -39,6 +39,7 @@
     "applicationinsights": "^3.0.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "color-convert": "^3.0.1",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
