change from yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "stylelint-config-standard-scss": "^13.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -67,7 +67,7 @@
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^1.0.1",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -117,5 +117,5 @@
     "*.{js,ts}": "eslint --cache --fix",
     "*.{js,ts,css,md,html,json}": "prettier --write"
   },
-  "packageManager": "yarn@3.8.2"
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
