--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "start:dev": "nodemon --config nodemon.json",
     "lint": "stylelint **/*.scss -v -q && eslint . --ext .js,.ts && prettier --check .",
     "lint:fix": "prettier --write . .github && eslint --fix .",
-    "build": "yarn webpack --config webpack.config.js",
-    "build:prod": "NODE_ENV=production yarn webpack --mode production --config webpack.config.js",
-    "test": "npx if-env CI=true && exit 0 || yarn test:unit",
+    "build": "pnpm webpack --config webpack.config.js",
+    "build:prod": "NODE_ENV=production pnpm webpack --mode production --config webpack.config.js",
+    "test": "npx if-env CI=true && exit 0 || pnpm test:unit",
     "test:unit": "jest",
     "test:coverage": "jest --coverage",
     "test:routes": "jest -c jest.routes.config.js",
     "test:functional": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs run --steps",
-    "cichecks": "yarn install && yarn build && yarn rebuild puppeteer && yarn lint && yarn test && yarn test:routes && yarn test:a11y",
-    "prepare": "husky install"
+    "cichecks": "pnpm install && pnpm build && pnpm rebuild puppeteer && pnpm lint && pnpm test && pnpm test:routes && pnpm test:a11y",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hmcts/info-provider": "^1.1.0",
@@ -66,15 +66,12 @@
     "@babel/preset-env": "^7.22.14",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^1.0.1",
-    "@types/chai-as-promised": "^7.1.5",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "axios-debug-log": "^1.0.0",
     "babel-loader": "^9.1.3",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^8.0.0",
     "chokidar": "^3.6.0",
     "codeceptjs": "^3.5.3",
     "copy-webpack-plugin": "9.1.0",
@@ -85,8 +82,8 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "^28.0.0",
     "html-webpack-plugin": "^5.5.3",
-    "husky": "^9.0.0",
-    "jest": "^29.6.2",
+    "husky": "9.1.7",
+    "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.1",
     "lint-staged": "^15.0.0",
     "mini-css-extract-plugin": "^2.7.6",
@@ -97,8 +94,6 @@
     "request": "^2.88.2",
     "sass": "^1.65.1",
     "sass-loader": "^14.0.0",
-    "sinon": "^18.0.0",
-    "sinon-chai": "^3.7.0",
     "style-loader": "^4.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.1",
