--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["jest"],
     "outDir": "./src/",
     "module": "commonjs",
     "esModuleInterop": true,
@@ -20,5 +21,6 @@
       "routes/*": ["routes/*"]
     }
   },
-  "exclude": ["**/*.test.ts", "**/codecept.conf.ts", "**/__mocks__/*"]
+  "exclude": ["**/codecept.conf.ts", "**/__mocks__/*"],
+  "include": ["src", "test", "**/*.test.ts"]
 }
